--- a/src/assets/scss/pages/page.globals.scss
+++ b/src/assets/scss/pages/page.globals.scss
@@ -196,25 +196,25 @@
             }
 
             // footer
-            #site-footer {
+            // #site-footer {
 
-                position: relative;
+            //     position: relative;
 
-                top: auto;
-                right: auto;
-                bottom: auto;
-                left: auto;
+            //     top: auto;
+            //     right: auto;
+            //     bottom: auto;
+            //     left: auto;
 
-                width: 100%;
+            //     width: 100%;
 
-                // footer row
-                .footer-row {
+            //     // footer row
+            //     .footer-row {
 
-                    width: 100%;
+            //         width: 100%;
 
-                }
+            //     }
 
-            }
+            // }
 
         }
 
